yaml/polls-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polls-app
  labels:
    app: polls
spec:
  replicas: 2
  selector:
    matchLabels:
      app: polls
  template:
    metadata:
      labels:
        app: polls
    spec:
      containers:
        - image: registry.digitalocean.com/rfreis/polls:latest
          name: polls
          ports:
            - containerPort: 8000
              name: gunicorn
