yaml/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polls-redis
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: master
    spec:
      containers:
      - name: master
        image: redis
        # resources:
        #   requests:
        #     cpu: 100m
        #     memory: 100Mi
        ports:
        - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: polls-redis-service
  labels:
    app: polls-redis-service
    role: master
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    role: master
