yaml/polls-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: polls-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - polls.dochaus.app
    - workaround-test.dochaus.app
    secretName: polls-tls
  rules:
  - host: polls.dochaus.app
    http:
      paths:
      - backend:
          serviceName: polls
          servicePort: 8000
  - host: workaround-test.dochaus.app
    http:
      paths:
      - backend:
          serviceName: polls
          servicePort: 8000
